--- a/index_16.html
+++ b/index_16.html
@@ -25,15 +25,19 @@
                     <div class="header_top">
                         <span class="col-xs-2 fa fa-angle-left back "></span>
                         <p class="col-xs-8 header_top_p">
-                            BESTELLDETAIL
+                            BESTELLUNG APONOW
                         </p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="header_choose col-xs-12">
-                        <p class="col-xs-6 left active"> AKTUELL</p>
-                        <p class="col-xs-6 right">BESTELLÜBERSICHT </p>
+                        <img src="imgs/icon_circle_big.png" alt="">
+                        <img src="imgs/icon_circle_small.png" alt="">
+                        <img src="imgs/icon_circle_small.png" alt="">
                     </div>
+                </div>
+                <div class="row">
+                    <h1>Wählen Sie eine Lieferoption</h1>
                 </div>
             </div>
         </header>
