--- a/index_17.html
+++ b/index_17.html
@@ -31,8 +31,8 @@
                 </div>
                 <div class="row">
                     <div class="header_choose col-xs-12">
-                        <img src="imgs/icon_circle_big.png" alt="">
                         <img src="imgs/icon_circle_small.png" alt="">
+                        <img src="imgs/icon_circle_big.png" alt="">
                         <img src="imgs/icon_circle_small.png" alt="">
                     </div>
                 </div>
@@ -52,28 +52,14 @@
                             <div class="flash">
                                 <div class="row">
                                     <div class="container">
-                                        <div class="col-xs-offset-1 col-xs-1">
-                                            <h1>Flash
-                                            </h1>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="container">
                                         <div class="col-xs-1">
                                             <div class="row img">
                                                 <img src="imgs/icon_circle.png" alt="">
                                             </div>
                                         </div>
-                                        <div class="col-xs-6">
+                                        <div class="col-xs-10">
                                             <div class="row flash-text">
-                                                <p>Lieferung innerhalb einer
-                                                    Stunde ab Bestellung</p>
-                                            </div>
-                                        </div>
-                                        <div class="col-xs-4">
-                                            <div class="row">
-                                                <p class="money">6,99 €</p>
+                                                <h1>Barzahlung bei Lieferung</h1>
                                             </div>
                                         </div>
                                     </div>
@@ -90,46 +76,8 @@
                             <div class="flash">
                                 <div class="row">
                                     <div class="container">
-                                        <div class="col-xs-offset-1 col-xs-1">
-                                            <h1>Flash
-                                            </h1>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="container">
-                                        <div class="col-xs-1">
-                                            <div class="row img">
-                                                <img src="imgs/icon_circle.png" alt="">
-                                            </div>
-                                        </div>
-                                        <div class="col-xs-6">
-                                            <div class="row flash-text">
-                                                <p>Lieferung innerhalb einer
-                                                    Stunde ab Bestellung</p>
-                                            </div>
-                                        </div>
-                                        <div class="col-xs-4">
-                                            <div class="row">
-                                                <p class="money">6,99 €</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </content>
-                </div>
-
-                <div class="row">
-                    <content>
-                        <div class="container">
-                            <div class="flash">
-                                <div class="row">
-                                    <div class="container">
-                                        <div class="col-xs-offset-1 col-xs-1">
-                                            <h1>Flash
-                                            </h1>
+                                        <div class="col-xs-offset-1 col-xs-1 pay">
+                                            <img src="imgs/icon_pay.png" alt="">
                                         </div>
                                     </div>
                                 </div>
