--- a/index_17.html
+++ b/index_17.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Index 16</title>
+    <title>Index 17</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -88,15 +88,14 @@
                                                 <img src="imgs/icon_circle.png" alt="">
                                             </div>
                                         </div>
-                                        <div class="col-xs-6">
+                                        <div class="col-xs-10">
                                             <div class="row flash-text">
-                                                <p>Lieferung innerhalb einer
-                                                    Stunde ab Bestellung</p>
-                                            </div>
-                                        </div>
-                                        <div class="col-xs-4">
-                                            <div class="row">
-                                                <p class="money">6,99 €</p>
+                                                <p>Nach der Bestellannahme einer lokalen
+                                                    Apotheke erhalten Sie in der
+                                                    Lieferbestätigung die PayPal-Adresse der
+                                                    Apotheke, die Sie beliefern wird. Sie
+                                                    überweisen erst dann den Rechnungsbetrag
+                                                    direkt an die Apotheke.</p>
                                             </div>
                                         </div>
                                     </div>
