--- a/index_16.html
+++ b/index_16.html
@@ -90,8 +90,8 @@
                             <div class="flash">
                                 <div class="row">
                                     <div class="container">
-                                        <div class="col-xs-offset-1 col-xs-1">
-                                            <h1>Flash
+                                        <div class="col-xs-offset-1 col-xs-10">
+                                            <h1>Fast
                                             </h1>
                                         </div>
                                     </div>
@@ -105,13 +105,13 @@
                                         </div>
                                         <div class="col-xs-6">
                                             <div class="row flash-text">
-                                                <p>Lieferung innerhalb einer
-                                                    Stunde ab Bestellung</p>
+                                                <p>Lieferung innerhalb von vier
+                                                    Stunden ab Bestelleingang</p>
                                             </div>
                                         </div>
                                         <div class="col-xs-4">
                                             <div class="row">
-                                                <p class="money">6,99 €</p>
+                                                <p class="money">3,99 €</p>
                                             </div>
                                         </div>
                                     </div>
@@ -127,8 +127,8 @@
                             <div class="flash">
                                 <div class="row">
                                     <div class="container">
-                                        <div class="col-xs-offset-1 col-xs-1">
-                                            <h1>Flash
+                                        <div class="col-xs-offset-1 col-xs-10">
+                                            <h1>Same Day
                                             </h1>
                                         </div>
                                     </div>
@@ -142,13 +142,49 @@
                                         </div>
                                         <div class="col-xs-6">
                                             <div class="row flash-text">
-                                                <p>Lieferung innerhalb einer
-                                                    Stunde ab Bestellung</p>
+                                                <p>Lieferung noch heute</p>
                                             </div>
                                         </div>
                                         <div class="col-xs-4">
                                             <div class="row">
-                                                <p class="money">6,99 €</p>
+                                                <p class="money">0 €</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </content>
+                </div>
+
+                <div class="row">
+                    <content>
+                        <div class="container">
+                            <div class="flash">
+                                <div class="row">
+                                    <div class="container">
+                                        <div class="col-xs-offset-1 col-xs-10">
+                                            <h1>Next day
+                                            </h1>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="container">
+                                        <div class="col-xs-1">
+                                            <div class="row img">
+                                                <img src="imgs/icon_circle.png" alt="">
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-6">
+                                            <div class="row flash-text">
+                                                <p>Lieferung Lieferung am
+                                                    nächsten Werktag</p>
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-4">
+                                            <div class="row">
+                                                <p class="money">0 €</p>
                                             </div>
                                         </div>
                                     </div>
