--- a/index_2.html
+++ b/index_2.html
@@ -46,12 +46,12 @@
         <div class="container">
             <content>
                <div class="row">
-                   <p class="view_result">Lorem ipsum dolor</p>
-                   <p class="view_result">Lorem ipsum dolor</p>
-                   <p class="view_result">Lorem ipsum dolor</p>
-                   <p class="view_result">Lorem ipsum dolor</p>
-                   <p class="view_result">Lorem ipsum dolor</p>
-                   <p class="view_result">Lorem ipsum dolor</p>
+                   <p class="view_result">Aciclobeta</p>
+                   <p class="view_result">Aciclobeta arzneimittel</p>
+                   <p class="view_result">Aciclobeta betapharm</p>
+                   <p class="view_result">Aciclobeta creme</p>
+                   <p class="view_result">Aciclobetta lippenherpes</p>
+                   <p class="view_result">Aciclostad</p>
                    <p class="view_result">Lorem ipsum dolor</p>
                    <p class="view_result">Lorem ipsum dolor</p>
                    <p class="view_result">Lorem ipsum dolor</p>
@@ -63,3 +63,10 @@
 </div>
 </body>
 </html>
+
+
+
+
+
+
+
