--- a/index_4.html
+++ b/index_4.html
@@ -63,7 +63,7 @@
                                         </div>
                                         <div class="content_price">
                                             <div class="col-xs-6 price">
-                                                <p class="">12,60 <span class="money_euro fa fa-euro"></span></p>
+                                                <p class="">12,60 €</p>
                                             </div>
                                             <span class="col-xs-offset-5 col-xs-1 price_plus"></span>
                                         </div>
@@ -85,7 +85,7 @@
                                         </div>
                                         <div class="content_price">
                                             <div class="col-xs-6 price">
-                                                <p class="">12,60 <span class="money_euro fa fa-euro"></span></p>
+                                                <p class="">12,60 €</p>
                                             </div>
                                             <span class="col-xs-offset-5 col-xs-1 price_plus"></span>
                                         </div>
@@ -107,7 +107,7 @@
                                         </div>
                                         <div class="content_price">
                                             <div class="col-xs-6 price">
-                                                <p class="">12,60 <span class="money_euro fa fa-euro"></span></p>
+                                                <p class="">12,60 €</p>
                                             </div>
                                             <span class="col-xs-offset-5 col-xs-1 price_plus"></span>
                                         </div>
@@ -122,6 +122,38 @@
                     </div>
                 </content>
             </div>
+        </div>
+    </div>
+
+    <div class="" id="footer">
+        <div id="exTab1" class="col-xs-12">
+            <ul class="nav nav-pills">
+                <li class="active">
+                    <a href="#1a" data-toggle="tab"><span class="fa fa-th-large"></span>
+                        <p style="text-align: center;vertical-align: middle">News</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#2a" data-toggle="tab"><span class="fa fa-graduation-cap coaching"></span>
+                        <p style="text-align: center;vertical-align: middle">Coachings</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#3a" data-toggle="tab"><span class="fa fa-comment-o"></span>
+                        <p style="text-align: center;vertical-align: middle">Zenzai</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#3a" data-toggle="tab"><span class="fa  fa-shopping-cart"></span>
+                        <p style="text-align: center;vertical-align: middle">Shop</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#4a" data-toggle="tab"><span class="fa fa-user-o"></span>
+                        <p style="text-align: center;vertical-align: middle">Profile</p>
+                    </a>
+                </li>
+            </ul>
         </div>
     </div>
 </div>
