--- a/index_5.html
+++ b/index_5.html
@@ -36,7 +36,7 @@
                             <h1 class="col-xs-10">
                                 Agnus Castus AL
                             </h1>
-                            <span class="col-xs-2 icon_remove_banner"> <img src="shop/index_4/remove.png" alt=""></span>
+                            <span class="col-xs-2 icon_remove_banner"> <img src="imgs/icon_remove_5.png" alt=""></span>
                             <!--class="col-xs-2 icon_remove_banner"></span>-->
                         </div>
                     </div>
@@ -65,7 +65,7 @@
                                     </div>
                                     <div class="content_price">
                                         <div class="col-xs-8 price">
-                                            <h2 class="money">12,60 <span class="money_euro fa fa-euro"></span></h2>
+                                            <h2 class="money">12,60 €</h2>
 
                                         </div>
                                         <div class="col-xs-4 icon_money">
@@ -87,7 +87,7 @@
                                     </div>
                                     <div class="content_price">
                                         <div class="col-xs-8 price">
-                                            <h2 class="money">12,60 <span class="money_euro fa fa-euro"></span></h2>
+                                            <h2 class="money">12,60 €</h2>
                                         </div>
                                         <div class="col-xs-4 icon_money">
                                             <span class="pull-right price_plus"></span>
@@ -108,7 +108,7 @@
                                     </div>
                                     <div class="content_price">
                                         <div class="col-xs-8 price">
-                                            <h2 class="money">12,60 <span class="money_euro fa fa-euro"></span></h2>
+                                            <h2 class="money">12,60 €</h2>
                                         </div>
                                         <div class="col-xs-4 icon_money">
                                             <span class="pull-right price_plus"></span>
@@ -129,7 +129,7 @@
                                     </div>
                                     <div class="content_price">
                                         <div class="col-xs-8 price">
-                                            <h2 class="money">12,60 <span class="money_euro fa fa-euro"></span></h2>
+                                            <h2 class="money">12,60 €</h2>
                                         </div>
                                         <div class="col-xs-4 icon_money">
                                             <span class="pull-right price_plus"></span>
@@ -156,7 +156,7 @@
                                         </div>
                                         <div class="content_price">
                                             <div class="col-xs-8 price">
-                                                <h2 class="money">12,60 <span class="money_euro fa fa-euro"></span></h2>
+                                                <h2 class="money">12,60 €</h2>
                                             </div>
                                             <div class="col-xs-4 icon_money">
                                                 <span class="pull-right price_plus"></span>
@@ -177,7 +177,7 @@
                                         </div>
                                         <div class="content_price">
                                             <div class="col-xs-8 price">
-                                                <h2 class=" money">12,60 <span class="money_euro fa fa-euro"></span>
+                                                <h2 class=" money">12,60 €
                                                 </h2>
                                             </div>
                                             <div class="col-xs-4 icon_money">
@@ -201,7 +201,7 @@
                                         </div>
                                         <div class="content_price">
                                             <div class="col-xs-8 price">
-                                                <h2 class="money">12,60 <span class="money_euro fa fa-euro"></span></h2>
+                                                <h2 class="money">12,60 €</h2>
                                             </div>
                                             <div class="col-xs-4 icon_money">
                                                 <span class="pull-right price_plus"></span>
@@ -222,7 +222,7 @@
                                         </div>
                                         <div class="content_price">
                                             <div class="col-xs-8 price">
-                                                <h2 class="money">12,60 <span class="money_euro fa fa-euro"></span></h2>
+                                                <h2 class="money">12,60 €</h2>
                                             </div>
                                             <div class="col-xs-4 icon_money">
                                                 <span class="pull-right price_plus"></span>
@@ -234,7 +234,7 @@
                             <div class="item">
                                 <div class="col-xs-6 content_pad">
                                     <div class="product">
-                                        <img src="shop/index_5/produce_2.png" alt="">
+                                        <img src="imgs/produce_2.png" alt="">
                                         <div class="content_text">
                                             <h1 class="name">
                                                 Agnus Castus AL Filmtabletten
@@ -245,7 +245,7 @@
                                         </div>
                                         <div class="content_price">
                                             <div class="col-xs-8 price">
-                                                <h2 class="money">12,60 <span class="money_euro fa fa-euro"></span></h2>
+                                                <h2 class="money">12,60 €</h2>
                                             </div>
                                             <div class="col-xs-4 icon_money">
                                                 <span class="pull-right price_plus"></span>
@@ -255,7 +255,7 @@
                                 </div>
                                 <div class="col-xs-6 content_pad">
                                     <div class="product">
-                                        <img src="shop/index_5/produce_2.png" alt="">
+                                        <img src="imgs/produce_2.png" alt="">
                                         <div class="content_text">
                                             <h1 class="name">
                                                 Agnus Castus AL Filmtabletten
@@ -266,7 +266,7 @@
                                         </div>
                                         <div class="content_price">
                                             <div class="col-xs-8 price">
-                                                <h2 class="money">12,60 <span class="money_euro fa fa-euro"></span></h2>
+                                                <h2 class="money">12,60 €</h2>
                                             </div>
                                             <div class="col-xs-4 icon_money">
                                                 <span class="pull-right price_plus"></span>
@@ -286,7 +286,7 @@
         </div>
     </div>
 
-    <!--<footer class="" id="footer">
+    <footer class="" id="footer">
         <div class="row">
             <div id="exTab1">
                 <ul class="nav nav-pills">
@@ -301,7 +301,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="" data-toggle="tab"><span class="fa fa-comment-o"></span><br>
+                        <a href="" data-toggle="tab"><span class="fa fa-comment-o"></span>
                             <p style="text-align: center;vertical-align: middle">Zenzai</p>
                         </a>
                     </li>
@@ -318,7 +318,7 @@
                 </ul>
             </div>
         </div>
-    </footer>-->
+    </footer>
 </div>
 </body>
 </html>
