--- a/index_6.html
+++ b/index_6.html
@@ -17,98 +17,100 @@
     <link rel="stylesheet" href="css/index_6.css">
 </head>
 <body>
-<div class="container bg-home">
-    <div class="row">
-        <header>
-            <div class="container">
-                <div class="header_top">
-                    <div class="row">
-                        <div class="col-xs-12">
-                            <span class="col-xs-1 fa fa-angle-left back "></span>
-                            <p class="col-xs-9 col-xs-offset-1 header_top_p">
-                                PRODUKTBESCHREIBUNG
-                            </p>
+<div class="contaier-fluid">
+    <div class="container bg-home">
+        <div class="row">
+            <header>
+                <div class="container">
+                    <div class="header_top">
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <span class="col-xs-1 fa fa-angle-left back "></span>
+                                <p class="col-xs-9 col-xs-offset-1 header_top_p">
+                                    PRODUKTBESCHREIBUNG
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </header>
-    </div>
-    <div class="row">
-        <div class="content_9">
-            <div class="container">
-                <div class="content_modal">
-                    <div class="row">
-                        <div class="content_main ">
-                            <h1>Indikationen:</h1>
-                            <p>
-                                - Regeltempoanomalien - Prämenstruelles
-                                Syndrom - Mastodynie
-                            </p>
+            </header>
+        </div>
+        <div class="row">
+            <div class="content_9">
+                <div class="container">
+                    <div class="content_modal">
+                        <div class="row">
+                            <div class="content_main ">
+                                <h1>Indikationen:</h1>
+                                <p>
+                                    - Regeltempoanomalien - Prämenstruelles
+                                    Syndrom - Mastodynie
+                                </p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="content_main">
-                            <h1>Hinweis:</h1>
-                            <p>
-                                Bei Spannungs- und Schwellungsgefühl in den
-                                Brüsten sowie bei Störungen der Regelblutung
-                                sollte zunächst ein Arzt aufgesucht werden, da
-                                es sich um Erkrankungen handeln kann, die
-                                einer ärztlichen Untersuchung bedürfen.
-                            </p>
+                        <div class="row">
+                            <div class="content_main">
+                                <h1>Hinweis:</h1>
+                                <p>
+                                    Bei Spannungs- und Schwellungsgefühl in den
+                                    Brüsten sowie bei Störungen der Regelblutung
+                                    sollte zunächst ein Arzt aufgesucht werden, da
+                                    es sich um Erkrankungen handeln kann, die
+                                    einer ärztlichen Untersuchung bedürfen.
+                                </p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="content_main ">
-                            <h1>Lorem ipsum</h1>
-                            <p>
-                                Lorem ipsum dolor sit amet, consetetur
-                                sadipscing elitr, sed diam nonumy
-                                eirmod tempor invidunt ut labore et
-                                dolore magna aliquyam erat, diam voluptua.
-                                At vero eos et accusam et justo duo
-                                dolores et ea rebum. Stet clita kasd gren
-                                sea takimata sanctus est Lorem sit amet.
-                            </p>
+                        <div class="row">
+                            <div class="content_main ">
+                                <h1>Lorem ipsum</h1>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consetetur
+                                    sadipscing elitr, sed diam nonumy
+                                    eirmod tempor invidunt ut labore et
+                                    dolore magna aliquyam erat, diam voluptua.
+                                    At vero eos et accusam et justo duo
+                                    dolores et ea rebum. Stet clita kasd gren
+                                    sea takimata sanctus est Lorem sit amet.
+                                </p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="content_main ">
-                            <h1>Dosierung:</h1>
-                            <p>
-                                Einmal täglich 1 Tablette einnehmen. Die
-                                Tabletten sollen möglichst immer zur gleichen
-                                Tageszeit eingenommen werden.
-                                Die Einnahme sollte über mindestens 3
-                                Monatszyklen erfolgen.
-                            </p>
+                        <div class="row">
+                            <div class="content_main ">
+                                <h1>Dosierung:</h1>
+                                <p>
+                                    Einmal täglich 1 Tablette einnehmen. Die
+                                    Tabletten sollen möglichst immer zur gleichen
+                                    Tageszeit eingenommen werden.
+                                    Die Einnahme sollte über mindestens 3
+                                    Monatszyklen erfolgen.
+                                </p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="content_main">
-                            <h1>Wirkstoff:</h1>
-                            <p>
-                                Mönchspfefferfrüchte-Trockenextrakt (7-13:1);
-                                Auszugsmittel: Ethanol 60% (m/m).
-                                Enthält Glucose und Lactose
-                            </p>
+                        <div class="row">
+                            <div class="content_main">
+                                <h1>Wirkstoff:</h1>
+                                <p>
+                                    Mönchspfefferfrüchte-Trockenextrakt (7-13:1);
+                                    Auszugsmittel: Ethanol 60% (m/m).
+                                    Enthält Glucose und Lactose
+                                </p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="content_main ">
-                            <h1>Indikation:</h1>
-                            <p>
-                                - Rhythmusstörungen der Regelblutung
-                                (Regeltempoanomalien) - Spannungs- und
-                                Schwellungsgefühl in den Brüsten (Mastodynie) -
-                                monatlich wiederkehrende Beschwerden vor
-                                Eintritt der Regelblutung (prämenstruelle
-                                Beschwerden). Hinweise zu den
-                                Anwendungsgebieten Bei Spannungs- und
-                                Schwellungsgefühl in den Brüsten sowie bei
-                                Störungen der Regelblutung sollte zunächst ein
-                            </p>
+                        <div class="row">
+                            <div class="content_main ">
+                                <h1>Indikation:</h1>
+                                <p>
+                                    - Rhythmusstörungen der Regelblutung
+                                    (Regeltempoanomalien) - Spannungs- und
+                                    Schwellungsgefühl in den Brüsten (Mastodynie) -
+                                    monatlich wiederkehrende Beschwerden vor
+                                    Eintritt der Regelblutung (prämenstruelle
+                                    Beschwerden). Hinweise zu den
+                                    Anwendungsgebieten Bei Spannungs- und
+                                    Schwellungsgefühl in den Brüsten sowie bei
+                                    Störungen der Regelblutung sollte zunächst ein
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
