--- a/index_7.html
+++ b/index_7.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/index_7.css">
 </head>
 <body>
-<div class="container bg-home">
+<div class="container-fluid">
     <div class="row">
         <header class="header_7">
             <div class="container">
