--- a/index_8.html
+++ b/index_8.html
@@ -248,57 +248,6 @@
                                                     <div class="content_price">
                                                         <div class="col-xs-8 price">
                                                             <h2 class="money">12,60 €</h2>
-
-                                                        </div>
-                                                        <div class="col-xs-4 icon_money">
-                                                            <span class="pull-right price_plus"></span>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="container">
-                                        <div class="row">
-                                            <div class="col-xs-6 content_pro">
-                                                <div class="product">
-                                                    <img src="imgs/produce.png" alt="">
-                                                    <div class="content_text">
-                                                        <h1 class="name">
-                                                            Agnus Castus AL Filmtabletten
-                                                        </h1>
-                                                        <p class="own">
-                                                            Aliud Pharma
-                                                        </p>
-                                                    </div>
-                                                    <div class="content_price">
-                                                        <div class="row">
-                                                            <div class="col-xs-8 price">
-                                                                <h2 class="money">12,60 €</h2>
-
-                                                            </div>
-                                                            <div class="col-xs-4 icon_money">
-                                                                <span class="pull-right price_plus"></span>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-xs-6 content_pro">
-                                                <div class="product">
-                                                    <img src="imgs/produce.png" alt="">
-                                                    <div class="content_text">
-                                                        <h1 class="name">
-                                                            Agnus Castus AL Filmtabletten
-                                                        </h1>
-                                                        <p class="own">
-                                                            Aliud Pharma
-                                                        </p>
-                                                    </div>
-                                                    <div class="content_price">
-                                                        <div class="col-xs-8 price">
-                                                            <h2 class="money">12,60 €</h2>
-
                                                         </div>
                                                         <div class="col-xs-4 icon_money">
                                                             <span class="pull-right price_plus"></span>
@@ -316,7 +265,7 @@
             </div>
     </content>
 </div>
-<!--<footer class="" id="footer">
+<footer class="" id="footer">
     <div class="row">
         <div id="exTab1">
             <ul class="nav nav-pills">
@@ -331,7 +280,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="" data-toggle="tab"><span class="fa fa-comment-o"></span><br>
+                    <a href="" data-toggle="tab"><span class="fa fa-comment-o"></span>
                         <p style="text-align: center;vertical-align: middle">Zenzai</p>
                     </a>
                 </li>
@@ -348,7 +297,7 @@
             </ul>
         </div>
     </div>
-</footer>-->
+</footer>
 </div>
 </body>
 </html>
