--- a/index_12.html
+++ b/index_12.html
@@ -31,8 +31,8 @@
                 </div>
                 <div class="row">
                     <div class="header_choose col-xs-12">
-                        <p class="col-xs-6 left active"> AKTUELL</p>
-                        <p class="col-xs-6 right">BESTELLÜBERSICHT </p>
+                        <p class="col-xs-6 left "> AKTUELL</p>
+                        <p class="col-xs-6 right active">BESTELLÜBERSICHT </p>
                     </div>
                 </div>
             </div>
